--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-TTS>=0.22.0
-fastapi
-uvicorn[standard]
-soundfile
-torch
-torchaudio
+fastapi==0.110.0
+uvicorn[standard]==0.30.0
+
+# Coqui TTS + XTTS v2
+TTS==0.21.1
+
+# Versão compatível com XTTS (antes das mudanças que quebram BeamSearchScorer/SampleOutput)
+transformers==4.36.2
+
+soundfile==0.12.1
